feat(engine): add standard CPU composition