@@ -8,6 +8,7 @@ import io.github.pho001.synaptik.engine.AdvancedCompiledGraph;
 import io.github.pho001.synaptik.engine.AdvancedEngine;
 import io.github.pho001.synaptik.engine.AdvancedPreparedExecution;
 import io.github.pho001.synaptik.engine.AdvancedRunResult;
+import io.github.pho001.synaptik.engine.Engine;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.List;
@@ -17,13 +18,16 @@ import org.junit.jupiter.api.Test;
 final class AdvancedEnginePublicShapeTest {
     @Test
     void exposesOnlyTheSpecifiedOpaqueLifecycleSurface() {
+        assertPublicFinal(Engine.class);
         assertPublicFinal(AdvancedEngine.class);
         assertPublicFinal(AdvancedCompiledGraph.class);
         assertPublicFinal(AdvancedPreparedExecution.class);
         assertPublicFinal(AdvancedRunResult.class);
+        assertTrue(AutoCloseable.class.isAssignableFrom(Engine.class));
         assertTrue(AutoCloseable.class.isAssignableFrom(AdvancedEngine.class));
         assertTrue(AutoCloseable.class.isAssignableFrom(AdvancedRunResult.class));
 
+        assertEquals(List.of("close", "isClosed", "standard"), publicMethodNames(Engine.class));
         assertEquals(List.of("borrow", "close", "compile", "isClosed", "prepare", "run",
                         "takeOwnership"), publicMethodNames(AdvancedEngine.class));
         assertEquals(List.of(), publicMethodNames(AdvancedCompiledGraph.class));
@@ -31,7 +35,21 @@ final class AdvancedEnginePublicShapeTest {
         assertEquals(List.of("close", "isClosed", "resultCount"),
                 publicMethodNames(AdvancedRunResult.class));
 
-        for (Class<?> type : List.of(AdvancedEngine.class, AdvancedCompiledGraph.class,
+        assertEquals(0, Arrays.stream(Engine.class.getDeclaredConstructors())
+                .filter(constructor -> Modifier.isPublic(constructor.getModifiers())
+                        || Modifier.isProtected(constructor.getModifiers())).count());
+        assertEquals(1, Engine.class.getDeclaredConstructors().length);
+        var engineConstructor = Engine.class.getDeclaredConstructors()[0];
+        assertEquals(0, engineConstructor.getModifiers());
+        assertEquals(List.of(AdvancedEngine.class),
+                Arrays.asList(engineConstructor.getParameterTypes()));
+        assertEquals(1, Engine.class.getDeclaredFields().length);
+        var field = Engine.class.getDeclaredFields()[0];
+        assertTrue(Modifier.isPrivate(field.getModifiers()));
+        assertTrue(Modifier.isFinal(field.getModifiers()));
+        assertEquals(AdvancedEngine.class, field.getType());
+
+        for (Class<?> type : List.of(Engine.class, AdvancedEngine.class, AdvancedCompiledGraph.class,
                 AdvancedPreparedExecution.class, AdvancedRunResult.class)) {
             assertEquals(0, Arrays.stream(type.getDeclaredConstructors())
                     .filter(constructor -> Modifier.isPublic(constructor.getModifiers())
@@ -44,6 +62,8 @@ final class AdvancedEnginePublicShapeTest {
                         assertFalse(signature.contains("synaptik.runtime.execution.PreparedExecution"));
                         assertFalse(signature.contains("synaptik.runtime.run.RunResult"));
                         assertFalse(signature.contains("synaptik.runtime.run.RunState"));
+                        assertFalse(type == Engine.class && signature.contains("Advanced"));
+                        assertFalse(type == Engine.class && signature.contains("synaptik.backend.cpu"));
                         assertFalse(signature.contains(".internal."));
                     });
         }
